samples/_failures_safe/1761603086_b550b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a34dc7a.c: In function ‘print_high_severity_entries’:
./samples/SAFE/__tmp_9a34dc7a.c:133:5: error: expected declaration or statement at end of input
  133 |     for (int i = 0; i < analyzer->entry_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_9a34dc7a.c:133:5: error: expected declaration or statement at end of input
